Aanpassingen SAS_build_model

--- a/Code/notebooks/SAS_build_model.ipynb
+++ b/Code/notebooks/SAS_build_model.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "\n",
     "# Selecteer hier het gewenste gecombineerde geopackage (of geef de locatie van de nieuw te creëren geopackage):\n",
-    "gpkg_file = folder + r\"\\GIS\\HYDAMO\\Combined_cursus_ROI_test_2.gpkg\"\n",
+    "gpkg_file = folder + r\"\\GIS\\HYDAMO\\Combined_cursus_ROI.gpkg\"\n",
     "\n",
     "# Of selecteer welke datasets gecombineerd worden in een nieuwe geopackage met bovenstaande naam\n",
     "gpkgs_list = [\n",
@@ -243,7 +243,7 @@
     "- roughness_2d_raster_path\n",
     "- dambreak_path (in class DamBreak)\n",
     "\n",
-    "Voor de cursus wordt aangeraden om, mocht dat gewenst zijn, de gridgrootte van het 2D grid te veranderen. Deze aanpassingen zijn getest tijdens ontwikkeling van het ROI. Het config_dhydro bestand maakt het eenvoudig om ook de extent van het 2D grid (voor regionale modellering) aan te passen, maar dat is in deze fase van het ROI nog niet uitvoerig getest. \n",
+    "Voor de cursus wordt aangeraden om, mocht dat gewenst zijn, de gridgrootte van het 2D grid te veranderen (dx en dy in class Models.two_d). Deze aanpassingen zijn getest tijdens ontwikkeling van het ROI. Het config_dhydro bestand maakt het eenvoudig om ook de extent van het 2D grid (voor regionale modellering) aan te passen, maar dat is in deze fase van het ROI nog niet uitvoerig getest. \n",
     "\n",
     "Bij het aanpassen van het 2D grid: het genereren van een gedetailleerd grid duurt lang en resulteert in lange rekentijden. \n",
     "\n",
