update notebooks voor cursus

--- a/Code/notebooks/SAS_build_model.ipynb
+++ b/Code/notebooks/SAS_build_model.ipynb
@@ -5,23 +5,20 @@
    "id": "38a90c8a",
    "metadata": {},
    "source": [
-    "# 0. Imports\n",
-    "Pas locatie in sys.path.append aan naar map met code"
+    "# 0. Imports\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "257fcf15",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# voeg hier de locatie van de ROI code toe:\n",
-    "sys.path.append(\"D:\\Work\\git\\GIS_tools\\Code\")\n",
+    "sys.path.append(\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\StandAloneServiceZipfile\\Code\")\n",
     "\n",
     "from data_structures.dhydro_data import DHydroData"
    ]
@@ -44,10 +41,10 @@
    "outputs": [],
    "source": [
     "# voeg hier de locatie van de input data toe:\n",
-    "folder = r\"D:\\Work\\Project\\P1414\"\n",
+    "folder = r\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\"\n",
     "\n",
     "# voeg hier de locatie toe voor de output van je DHYDRO model:\n",
-    "output_folder = r\"D:\\work\\P1414_ROI\\Models\\Combined\\ROI_SAS_test\"\n"
+    "output_folder = r\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\OutputModellen\"\n"
    ]
   },
   {
@@ -167,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ef0964d5",
    "metadata": {},
    "outputs": [],
@@ -186,6 +183,9 @@
     "            pass\n",
     "\n",
     "    dhd.clip_structures_by_branches()\n",
+    "    dhd.fixed_weirs_from_raw_data(config=\"wegen_config\", defaults=defaults)\n",
+    "    dhd.fixed_weirs_from_raw_data(config=\"relief_config\", defaults=defaults)\n",
+    "    dhd.fixed_weirs_from_raw_data(config=\"noordzeekeringen_config\", defaults=defaults)\n",
     "    \n",
     "    dhd.hydamo_to_gpkg(output_gpkg=gpkg_file)\n",
     "\n"
@@ -214,30 +214,30 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\HHSK.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\HHSK.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\HDSR.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\HDSR.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\HHD.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\HHD.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\HHR.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\HHR.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\WAGV.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\WAGV.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\ARKNZK.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\ARKNZK.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\Rijntakken.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\Rijntakken.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\RMM_closed.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\RMM_closed.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\noordzee_hoog.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\noordzee_hoog.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\markermeer.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\markermeer.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\tunnels.gpkg loaded.\n",
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\tunnels.gpkg loaded.\n",
       "\n",
-      "D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\Ontbrekende_stuwen.gpkg loaded.\n",
-      "Combined geopackage created: D:\\Work\\Project\\P1414\\GIS\\HYDAMO\\Combined_cursus_ROI.gpkg\n"
+      "C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\Ontbrekende_stuwen.gpkg loaded.\n",
+      "Combined geopackage created: C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\GIS\\HYDAMO\\Combined_cursus_ROI.gpkg\n"
      ]
     }
    ],
@@ -251,7 +251,10 @@
     "        \n",
     "        print(\"\\n\" + gpkg + ' loaded.')\n",
     "        \n",
-    "   \n",
+    "#     dhd.fixed_weirs_from_raw_data(config=\"wegen_config\", defaults=defaults)\n",
+    "#     dhd.fixed_weirs_from_raw_data(config=\"relief_config\", defaults=defaults)\n",
+    "#     dhd.fixed_weirs_from_raw_data(config=\"noordzeekeringen_config\", defaults=defaults)\n",
+    "    \n",
     "    dhd.hydamo_to_gpkg(output_gpkg=gpkg_file)\n",
     "    print('Combined geopackage created: '+gpkg_file)\n"
    ]
@@ -283,179 +286,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ca72a16e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "breachwidthini: entries with missing data: 0\n",
-      "crestlevelini: entries with missing data: 0\n",
-      "crestlevelmin: entries with missing data: 1\n",
-      "t0: entries with missing data: 0\n",
-      "\n",
-      "working on 1D branches\n",
-      "\n",
-      "\n",
-      "working on river profiles\n",
-      "\n",
-      "profile too far on branch\n",
-      "profile too far on branch\n",
-      "profile too far on branch\n",
-      "profile too far on branch\n",
-      "profile too far on branch\n",
-      "profile too far on branch\n",
-      "\n",
-      "working on duiker\n",
-      "\n",
-      "\n",
-      "working on gemaal\n",
-      "\n",
-      "\n",
-      "working on stuw\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some structures are not linked to a branch.\n",
-      "Structures [1362, 2302] have the same location.\n",
-      "Structures [2369, 2375] have the same location.\n",
-      "Structures [1213, 1231] have the same location.\n",
-      "Structures [1379, 2320] have the same location.\n",
-      "Structures [1401, 2341] have the same location.\n",
-      "Structures [1470, 2392] have the same location.\n",
-      "Structures [1426, 2362] have the same location.\n",
-      "Structures [1452, 2382] have the same location.\n",
-      "Structures [1472, 2395] have the same location.\n",
-      "Structures [1361, 2301] have the same location.\n",
-      "Structures [1384, 2325] have the same location.\n",
-      "Structures [1381, 2322] have the same location.\n",
-      "Structures [1463, 2386] have the same location.\n",
-      "Structures [1364, 2304] have the same location.\n",
-      "Structures [1668, 2418] have the same location.\n",
-      "Structures [1387, 2328] have the same location.\n",
-      "Structures [615, 1398] have the same location.\n",
-      "Structures [1417, 2352] have the same location.\n",
-      "Structures [227, 1500] have the same location.\n",
-      "Structures [1406, 2349] have the same location.\n",
-      "Structures [1388, 2329] have the same location.\n",
-      "Structures [606, 1266] have the same location.\n",
-      "Structures [1360, 2300] have the same location.\n",
-      "Structures [1433, 2377] have the same location.\n",
-      "Structures [599, 1353] have the same location.\n",
-      "Structures [609, 1171] have the same location.\n",
-      "Structures [1386, 2327] have the same location.\n",
-      "Structures [1466, 2388] have the same location.\n",
-      "Structures [1432, 2376] have the same location.\n",
-      "Structures [1429, 2365] have the same location.\n",
-      "Structures [1365, 2305] have the same location.\n",
-      "Structures [1402, 2342] have the same location.\n",
-      "Structures [1371, 2310] have the same location.\n",
-      "Structures [1464, 2387] have the same location.\n",
-      "Structures [620, 784] have the same location.\n",
-      "Structures [1394, 2334] have the same location.\n",
-      "Structures [1383, 2324] have the same location.\n",
-      "Structures [1366, 2306] have the same location.\n",
-      "Structures [1373, 2312] have the same location.\n",
-      "Structures [1370, 1392, 2308, 2330] have the same location.\n",
-      "Structures [1038, 1052] have the same location.\n",
-      "Structures [520, 1496] have the same location.\n",
-      "Structures [1469, 2391] have the same location.\n",
-      "Structures [1363, 1445, 2303, 2379] have the same location.\n",
-      "Structures [1461, 2384] have the same location.\n",
-      "Structures [1369, 2307] have the same location.\n",
-      "Structures [392, 893, 1497, 1498] have the same location.\n",
-      "Structures [1484, 2396] have the same location.\n",
-      "Structures [1421, 2361] have the same location.\n",
-      "Structures [1554, 2405] have the same location.\n",
-      "Structures [1377, 2316] have the same location.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Completig 1D model\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Structures [1404, 2345] have the same location.\n",
-      "Structures [1625, 2331] have the same location.\n",
-      "Structures [1533, 2401] have the same location.\n",
-      "Structures [1573, 1574, 1575, 1576, 1577, 1578, 1579, 2409, 2410, 2411, 2412, 2413, 2414, 2415] have the same location.\n",
-      "Structures [1467, 2389] have the same location.\n",
-      "Structures [1545, 2402] have the same location.\n",
-      "Structures [753, 2296] have the same location.\n",
-      "Structures [1420, 2360] have the same location.\n",
-      "Structures [1459, 2383] have the same location.\n",
-      "Structures [1724, 1726, 1727, 1728, 2419, 2421, 2422, 2423] have the same location.\n",
-      "Structures [1599, 1782] have the same location.\n",
-      "Structures [1400, 2340] have the same location.\n",
-      "Structures [1428, 2364] have the same location.\n",
-      "Structures [2454, 2486] have the same location.\n",
-      "Structures [2451, 2524] have the same location.\n",
-      "Structures [2476, 2516] have the same location.\n",
-      "Structures [2453, 2493] have the same location.\n",
-      "Structures [2446, 2506] have the same location.\n",
-      "Structures [2465, 2480, 2490, 2518] have the same location.\n",
-      "Structures [2456, 2530] have the same location.\n",
-      "Structures [2460, 2525] have the same location.\n",
-      "Structures [2455, 2532] have the same location.\n",
-      "Structures [2469, 2487] have the same location.\n",
-      "Structures [2482, 2519] have the same location.\n",
-      "Structures [2473, 2511] have the same location.\n",
-      "Structures [2457, 2523] have the same location.\n",
-      "Structures [2471, 2531] have the same location.\n",
-      "Structures [2447, 2488] have the same location.\n",
-      "Structures [2450, 2517] have the same location.\n",
-      "Structures [2468, 2521] have the same location.\n",
-      "Structures [2768, 2769, 2770, 2771] have the same location.\n",
-      "Structures [2820, 2821, 2822, 2823, 2824, 2825, 2826, 2827, 2828, 2829, 2830, 2831, 2832, 2833, 2834, 2835, 2836] have the same location.\n",
-      "Structures [2841, 2842, 2843, 2844] have the same location.\n",
-      "Structures [2762, 2763, 2764, 2765, 2766, 2767] have the same location.\n",
-      "Structures [2805, 2806, 2807, 2808, 2809, 2810, 2811, 2812, 2813, 2814, 2815, 2816, 2817] have the same location.\n",
-      "Structures [2774, 2775, 2776, 2777, 2778, 2779, 2780, 2781, 2782, 2783, 2784, 2785, 2786, 2787, 2788, 2789, 2790, 2791, 2792, 2793, 2794, 2795, 2796, 2797, 2798, 2799, 2800, 2801, 2802, 2803] have the same location.\n",
-      "Structures [2846, 2847] have the same location.\n",
-      "Structures [2991, 3004] have the same location.\n",
-      "Structures [2993, 2994, 3002] have the same location.\n",
-      "Structures [2690, 2995, 2997] have the same location.\n",
-      "Structures [2988, 2999] have the same location.\n",
-      "Structures [2985, 2986, 2996] have the same location.\n",
-      "Structures [2987, 2998] have the same location.\n",
-      "Structures [2992, 3001] have the same location.\n",
-      "Structures [2989, 2990, 3000] have the same location.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of branches without measured profile: 358\n",
-      "number of branches without either measured nor parameterized profile: 276\n",
-      "roughness too far on branch\n",
-      "roughness too far on branch\n",
-      "roughness too far on branch\n",
-      "roughness too far on branch\n",
-      "\n",
-      "Building 2D model grid\n",
-      "\n",
-      "created 2D mesh\n",
-      "added elevation to 2D mesh\n",
-      "added initial peilen to 2D mesh\n",
-      "added roughness to 2D mesh\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if build_model:\n",
     "    # 1. initialize an instance of DHydamoData\n",
@@ -472,9 +306,7 @@
     "    dhd.ddm.pomp[\"maximalecapaciteit\"] = 0\n",
     "\n",
     "    # 3. save as dhydro model\n",
-    "    dhd.to_dhydro(config=config_dhydro, output_folder=output_folder)\n",
-    "    \n",
-    "    print(\"\\n Done\")\n"
+    "    dhd.to_dhydro(config=config_dhydro, output_folder=output_folder)\n"
    ]
   },
   {
