--- a/Code/notebooks/SAS_run_model.ipynb
+++ b/Code/notebooks/SAS_run_model.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "## 1.3.1. Dambreak location\n",
     "Kies hieronder zelf een dambreak locatie. <br>\n",
-    "1. Run de cell hieronder.<br>\n",
+    "1. Run de cell hieronder. Dit kan iets langer duren dan de vorige cellen.<br>\n",
     "2. Kies de locatie van je damdoorbraak. Dit doe je door een lijn te trekken door een dam (rood) heen. Deze lijn moet ook een 1D2D link (groen) snijden. Het kan even duren voordat alle dammen en links zichtbaar zijn. <br>\n",
     "3. Kies het bovenstroomse punt (punt in watergang) voor het water door damdoorbraak stroomt. <br>\n",
     "4. Kies het benedenstroomse punt (grid cell) waar het water naar toe stroomt. <br>\n",
@@ -243,7 +243,7 @@
     "1. Run de cell hieronder.<br>\n",
     "2. Voer de gewenste parameters in voor de plot. <br>\n",
     "3. Klik op \"Plot map\". De eerste plot duurt iets langer.<br>\n",
-    "Indien je een ander model wil bekijken dan je hebt doorgerekend (of als je niks wil doorrekenen), dan kan je dat doen door in de cell hieronder een nieuw model_path toe te voegen. Voeg de volgende lijn toe: <br>\n",
+    "Indien je een ander model wil bekijken dan je hebt doorgerekend, dan kan je dat doen door in de cell hieronder een nieuw model_path toe te voegen. Voeg de volgende regel toe: <br>\n",
     "_model_path = r\"PATH_TO_MODEL\"_"
    ]
   },
