update sas documentatie

--- a/Code/notebooks/SAS_run_model.ipynb
+++ b/Code/notebooks/SAS_run_model.ipynb
@@ -116,7 +116,7 @@
     "## 1.3.1. Dambreak location\n",
     "Kies hieronder zelf een dambreak locatie. <br>\n",
     "1. Run de cell hieronder. Dit kan iets langer duren dan de vorige cellen.<br>\n",
-    "2. Kies de locatie van je damdoorbraak. Dit doe je door een lijn te trekken door een dam (rood) heen. Deze lijn moet ook een 1D2D link (groen) snijden. Het kan even duren voordat alle dammen en links zichtbaar zijn. <br>\n",
+    "2. Kies de locatie van je damdoorbraak. Dit doe je door een lijn te trekken door een dam (rood) heen. Deze lijn moet ook een 1D2D link (groen) snijden. Probeer je lijn parralel aan de dam te tekenen, maar wel snijdend door de dam (rood) en de 1D2D link (groen). Het kan even duren voordat alle dammen en links zichtbaar zijn. <br>\n",
     "3. Kies het bovenstroomse punt (punt in watergang) voor het water door damdoorbraak stroomt. <br>\n",
     "4. Kies het benedenstroomse punt (grid cell) waar het water naar toe stroomt. <br>\n",
     "5. Bekijk je geselecteerde locatie. Als je niet tevereden bent, run deze cell dan opnieuw."
