Real global paths
Bovenaan in de jupyter notebook / main scripts, kan nu de GIS folder worden aangeven waarna deze in alle config bestanden wordt gebruikt. Werkt alleen nog voor het opbouwen van een geopackage uit Raw Data (geïmplementeerd in de hydamo_from_raw_data functie).

--- a/Code/notebooks/SAS_build_model.ipynb
+++ b/Code/notebooks/SAS_build_model.ipynb
@@ -51,6 +51,9 @@
     "# voeg hier de locatie van de input data toe:\n",
     "folder = r\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\"\n",
     "\n",
+    "# voeg hier de locatie van de GIS input folder toe\n",
+    "GIS_folder = r\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\"\n",
+    "\n",
     "# voeg hier de locatie toe voor de output van je DHYDRO model:\n",
     "output_folder = r\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\OutputModellen\"\n"
    ]
@@ -183,7 +186,7 @@
     "        print(\"\\n\" + config)\n",
     "\n",
     "        dhd.hydamo_from_raw_data(\n",
-    "            defaults=defaults, config=config, branch_snap_dist=snap_dist_list[ix]\n",
+    "            defaults=defaults, config=config, branch_snap_dist=snap_dist_list[ix], GIS_folder=GIS_folder\n",
     "        )\n",
     "        try:\n",
     "            dhd.fixed_weirs_from_raw_data(config=config, defaults=defaults)\n",
