Boundary conditions Noordzee + Markermeer

--- a/Code/notebooks/SAS_build_model.ipynb
+++ b/Code/notebooks/SAS_build_model.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import os\n",
     "\n",
     "# voeg hier de locatie van de ROI code toe:\n",
     "sys.path.append(\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\StandAloneServiceZipfile\\Code\")\n",
@@ -53,6 +54,7 @@
     "\n",
     "# voeg hier de locatie van de GIS input folder toe\n",
     "GIS_folder = r\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\"\n",
+    "os.environ['GIS_folder_path'] = GIS_folder\n",
     "\n",
     "# voeg hier de locatie toe voor de output van je DHYDRO model:\n",
     "output_folder = r\"C:\\Werk\\Projecten\\P1414_ROI\\Cursus\\OutputModellen\"\n"
