--- a/Code/notebooks/SAS_run_model.ipynb
+++ b/Code/notebooks/SAS_run_model.ipynb
@@ -23,20 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a1ec636f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imports are succesfull!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
-    "import numpy as np\n",
     "import shutil\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "# insert the directory where you extracted the zip file here:\n",
-    "git_dir = r\"C:\\Werk\\Projecten\\P1414_ROI\\Github_P1414\\P1414\"\n",
+    "git_dir = r\"C:\\Work\\Projects\\HL-P24050_ROI\\05_Analysis\\P1414\"\n",
     "\n",
     "sys.path.append(os.path.join(git_dir, 'Code'))\n",
     "sys.path.append(os.path.join(git_dir, 'HydroLogic_Inundation_toolbox'))\n",
@@ -70,10 +77,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "87885da0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45ad02fe980e4fc58f19099f106910f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='C:\\\\Work\\\\Projects\\\\HL-P24050_ROI\\\\05_Analysis\\\\SAS_workdir\\\\run_model\\\\model_datab…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec6248c0e82940e98b6bad054035de26",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Update settings', layout=Layout(height='35px', width='99%'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "444facc59de041e193dd4b5afbe81fc5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Model settings are:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"folder\": \"C:\\\\Work\\\\Projects\\\\HL-P24050_ROI\\\\05_Analysis\\\\SAS_workdir\\\\run_model\\\\model_database\",\n",
+      "    \"model\": \"V23_WBD_25_exported\",\n",
+      "    \"scenario_name\": \"run\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "from notebooks.background_scripting.v1.select_basemodel import ModelSettings\n",
     "\n",
@@ -96,10 +166,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e406ef18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49c91fd5159a4378a86fffc287bb1105",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(IntText(value=0, description='Model start time (tStart in hours):', layout=Layout(margin='5px',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77eadb44b06743ba88f6d5b6f2b72500",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Update settings', layout=Layout(height='35px', width='99%'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c399e4e2965843a8a0a827bd1df92226",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'MDU settings are:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"tStart\": 0.0,\n",
+      "    \"tStop\": 168.0,\n",
+      "    \"mapInterval\": 0.0,\n",
+      "    \"DHYDRO location\": \"D:\\\\Koen\\\\dimrset_x64_237\\\\x64\\\\dimr\\\\scripts\\\\run_dimr.bat\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "from notebooks.background_scripting.v1.modify_mdu import ModifyMDU, copy_model\n",
     "\n",
@@ -114,12 +248,13 @@
    "metadata": {},
    "source": [
     "## 1.3.1. Dambreak location\n",
-    "Kies hieronder zelf een dambreak locatie. <br>\n",
-    "1. Run de cell hieronder. Dit kan iets langer duren dan de vorige cellen.<br>\n",
-    "2. Kies de locatie van je damdoorbraak. Dit doe je door een lijn te trekken door een dam (rood) heen. Deze lijn moet ook een 1D2D link (groen) snijden. Probeer je lijn parralel aan de dam te tekenen, maar wel snijdend door de dam (rood) en de 1D2D link (groen). Het kan even duren voordat alle dammen en links zichtbaar zijn. <br>\n",
-    "3. Kies het bovenstroomse punt (punt in watergang) voor het water door damdoorbraak stroomt. <br>\n",
-    "4. Kies het benedenstroomse punt (grid cell) waar het water naar toe stroomt. <br>\n",
-    "5. Bekijk je geselecteerde locatie. Als je niet tevereden bent, run deze cell dan opnieuw."
+    "Kies hieronder zelf een dambreak locatie. Bij een hoge resolutie kan het eventjes duren voordat de kaart verschijnt. <br> \n",
+    "1. Selecteer waar je ongeveer een damdoorbraak wil gaan doorrekenen. <br>\n",
+    "2. Run de cell hieronder. Dit kan iets langer duren dan de vorige cellen.<br>\n",
+    "3. Kies de locatie van je damdoorbraak. Dit doe je door een lijn te trekken door een dam (rood) heen. Deze lijn moet ook een 1D2D link (groen) snijden. Probeer je lijn parralel aan de dam te tekenen, maar wel snijdend door de dam (rood) en de 1D2D link (groen). Het kan even duren voordat alle dammen en links zichtbaar zijn. <br>\n",
+    "4. Kies het bovenstroomse punt (punt in watergang) voor het water door damdoorbraak stroomt. <br>\n",
+    "5. Kies het benedenstroomse punt (grid cell) waar het water naar toe stroomt. <br>\n",
+    "6. Bekijk je geselecteerde locatie. Als je niet tevereden bent, run deze cell dan opnieuw."
    ]
   },
   {
@@ -127,7 +262,64 @@
    "execution_count": null,
    "id": "a74f04d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6859959553e54a02a05e57283c100dc8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.97049316431671, 4.642538563889401], controls=(ZoomControl(options=['position', 'zoom_in_text', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "965c048ede0f4ed2be0af42fff0e9275",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='<b style=\"color:black;font-size:18px;\">Done! Inspect your results (4/4) </b>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12f6b45b0d4f464f9d5d13c37bc4a44e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a2109dceac946f9843cac7373877a35",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x05\\xdc\\x00\\x00\\x03\\xbe\\x08\\x02\\x00\\x00\\x00\\x91\\xbb@…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from notebooks.background_scripting.v1.modify_dambreak_v3 import DambreakWidget\n",
     "from notebooks.background_scripting.v1.modify_dambreak_v3 import UseTemplateDambreak\n",
@@ -157,10 +349,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f3989184",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "75c9ac721a8a4a0da177585c2ac0849c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FloatText(value=-0.38, description='Initial crest level of dambreach (crestLevelIni):', layout=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f507a8ca77c140aba7c720a041aea40a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Update settings', layout=Layout(height='35px', width='99%'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c0e68871f081454bba0b8b5ad573827d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from notebooks.background_scripting.v1.modify_dambreak_v3 import ModifyDambreak\n",
     "\n",
