New peil raster

--- a/Code/notebooks/SAS_build_model.ipynb
+++ b/Code/notebooks/SAS_build_model.ipynb
@@ -103,19 +103,15 @@
     "gpkg_file = folder + r\"\\GIS\\HYDAMO\\Combined_cursus_ROI.gpkg\"\n",
     "\n",
     "# Of selecteer welke datasets gecombineerd worden in een nieuwe geopackage met bovenstaande naam\n",
+    "# De snap afstanden (snap_dist) zijn van belang voor het aan elkaar koppelen van verschillende databronnen\n",
     "gpkgs_list = [\n",
-    "    folder + r\"\\GIS\\HYDAMO\\HHSK.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\HDSR.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\HHD.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\HHR.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\WAGV.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\ARKNZK.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\Rijntakken.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\RMM_closed.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\noordzee_hoog.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\markermeer.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\tunnels.gpkg\",\n",
-    "    folder +r\"\\GIS\\HYDAMO\\Ontbrekende_stuwen.gpkg\",\n",
+    "    {'gpkg_file': GIS_folder + r\"\\GIS\\HYDAMO\\Buitenwater.gpkg\",             'snap_dist': 10},\n",
+    "    {'gpkg_file': GIS_folder + r\"\\GIS\\HYDAMO\\HHSK.gpkg\",                    'snap_dist': 10},\n",
+    "    {'gpkg_file': GIS_folder + r\"\\GIS\\HYDAMO\\HDSR.gpkg\",                    'snap_dist': 35},\n",
+    "    {'gpkg_file': GIS_folder + r\"\\GIS\\HYDAMO\\HHD.gpkg\",                     'snap_dist': 10},\n",
+    "    {'gpkg_file': GIS_folder + r\"\\GIS\\HYDAMO\\HHR.gpkg\",                     'snap_dist': 10},\n",
+    "    {'gpkg_file': GIS_folder + r\"\\GIS\\HYDAMO\\WAGV.gpkg\",                    'snap_dist': 10},\n",
+    "    {'gpkg_file': GIS_folder + r\"\\GIS\\HYDAMO\\Tunnels_Onderdoorgangen.gpkg\", 'snap_dist': 0},\n",
     "]\n"
    ]
   },
@@ -141,27 +137,26 @@
    "outputs": [],
    "source": [
     "# Lijst met config bestanden\n",
+    "# De snap afstanden (snap_dist) zijn van belang voor het aan elkaar koppelen van verschillende databronnen\n",
     "config_list = [\n",
-    "    r\"hhsk_config\",\n",
-    "    r\"hdsr_config\",\n",
-    "    r\"hhd_config\",\n",
-    "    r\"hhr_config\",\n",
-    "    r\"wagv_config\",\n",
-    "    r\"ark_nzk_config\",\n",
-    "    r\"rijntakken_config\",\n",
-    "    r\"rijnmaasmonding__closed_config\",\n",
-    "    r\"noordzee_hoog_config\",\n",
-    "    r\"markermeer_config\",\n",
-    "    r\"tunnels_config\",\n",
-    "    r\"underpass_config\",\n",
-    "    r\"ontbrekende_stuwen_config\",\n",
+    "    {'config': r\"ark_nzk_config\",               'snap_dist': 10},\n",
+    "    {'config': r\"rijntakken_config\",            'snap_dist': 10},\n",
+    "    {'config': r\"rijnmaasmonding_open_config\",  'snap_dist': 100},\n",
+    "    {'config': r\"noordzee_config\",              'snap_dist': 200},\n",
+    "    {'config': r\"markermeer_config\",            'snap_dist': 100},\n",
+    "    {'config': r\"hhsk_config\",                  'snap_dist': 10},\n",
+    "    {'config': r\"hdsr_config\",                  'snap_dist': 20},\n",
+    "    {'config': r\"hhd_config\",                   'snap_dist': 10},\n",
+    "    {'config': r\"hhr_config\",                   'snap_dist': 10},\n",
+    "    {'config': r\"wagv_config\",                  'snap_dist': 10},\n",
+    "    {'config': r\"ontbrekende_stuwen_config\",    'snap_dist': 10},\n",
+    "    {'config': r\"randvoorwaarden_config\",       'snap_dist': 0},\n",
+    "    {'config': r\"tunnel_config\",                'snap_dist': 0},\n",
+    "    {'config': r\"underpass_config\",             'snap_dist': 0},\n",
     "]\n",
     "\n",
-    "# Lijst met snap afstanden, van belang voor het aan elkaar koppelen van verschillende databronnen.\n",
-    "snap_dist_list = [0, 0, 10, 10, 50, 10, 10, 100, 100, 100, 0, 0]\n",
-    "\n",
     "# Naam van DHYDRO config\n",
-    "config_dhydro = r\"combined_HHD_config\"\n",
+    "config_dhydro = r\"combined_WBD_config\"\n",
     "defaults = r\"defaults\""
    ]
   },
@@ -185,22 +180,21 @@
     "if build_database:\n",
     "    dhd = DHydroData()\n",
     "    for ix, config in enumerate(config_list):\n",
-    "        print(\"\\n\" + config)\n",
-    "\n",
+    "        \n",
     "        dhd.hydamo_from_raw_data(\n",
-    "            defaults=defaults, config=config, branch_snap_dist=snap_dist_list[ix], GIS_folder=GIS_folder\n",
+    "            defaults=defaults, config=config['config'], branch_snap_dist=config['snap_dist'], GIS_folder=folder_path_GIS, dhydro_config=config_dhydro\n",
     "        )\n",
     "        try:\n",
-    "            dhd.fixed_weirs_from_raw_data(config=config, defaults=defaults)\n",
+    "            dhd.fixed_weirs_from_raw_data(config=config['config'], defaults=defaults)\n",
     "        except AttributeError:\n",
     "            pass\n",
     "\n",
-    "    dhd.clip_structures_by_branches()\n",
+    "    dhd.clip_structures_by_branches(buffer=5)\n",
     "    dhd.fixed_weirs_from_raw_data(config=\"wegen_config\", defaults=defaults)\n",
     "    dhd.fixed_weirs_from_raw_data(config=\"relief_config\", defaults=defaults)\n",
     "    dhd.fixed_weirs_from_raw_data(config=\"noordzeekeringen_config\", defaults=defaults)\n",
-    "    \n",
     "    dhd.hydamo_to_gpkg(output_gpkg=gpkg_file)\n",
+    "    print('Combined all configs into a new geopackage: '+gpkg_file)\n",
     "\n"
    ]
   },
@@ -258,18 +252,17 @@
     "if load_gpkgs:\n",
     "    dhd = DHydroData()\n",
     "    for ix, gpkg in enumerate(gpkgs_list):\n",
+    "        print(\"\\n\" + gpkg['gpkg_file'])\n",
     "\n",
-    "        # load data\n",
-    "        dhd.hydamo_from_gpkg(gpkg, branch_snap_dist=snap_dist_list[ix])\n",
-    "        \n",
-    "        print(\"\\n\" + gpkg + ' loaded.')\n",
-    "        \n",
-    "#     dhd.fixed_weirs_from_raw_data(config=\"wegen_config\", defaults=defaults)\n",
-    "#     dhd.fixed_weirs_from_raw_data(config=\"relief_config\", defaults=defaults)\n",
-    "#     dhd.fixed_weirs_from_raw_data(config=\"noordzeekeringen_config\", defaults=defaults)\n",
-    "    \n",
+    "        # 2. load data\n",
+    "        dhd.hydamo_from_gpkg(gpkg['gpkg_file'], branch_snap_dist=gpkg['snap_dist'])\n",
+    "\n",
+    "    #dhd.fixed_weirs_from_raw_data(config=\"wegen_config\", defaults=defaults)\n",
+    "    #dhd.fixed_weirs_from_raw_data(config=\"relief_config\", defaults=defaults, min_length = 100)\n",
+    "    #dhd.fixed_weirs_from_raw_data(config=\"noordzeekeringen_config\", defaults=defaults)\n",
+    "\n",
     "    dhd.hydamo_to_gpkg(output_gpkg=gpkg_file)\n",
-    "    print('Combined geopackage created: '+gpkg_file)\n"
+    "    print('Combined geopackage created: '+gpkg_file)"
    ]
   },
   {
